<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>350</width>
    <height>287</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-color: rgb(0, 108, 158);</string>
  </property>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>60</y>
     <width>131</width>
     <height>21</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font-family: 'Arial'; /* Встановити сімейство шрифтів для вкладок */
  font-size: 14px; /* Встановити розмір шрифту для вкладок */
  font-weight: bold; 
color:rgb(255, 196, 112);

border-radius:8px;</string>
   </property>
   <property name="text">
    <string>Name</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="NameEdit">
   <property name="geometry">
    <rect>
     <x>200</x>
     <y>60</y>
     <width>113</width>
     <height>22</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font-family: 'Arial'; /* Встановити сімейство шрифтів для вкладок */
  font-size: 14px; /* Встановити розмір шрифту для вкладок */
  font-weight: bold; 
color:rgb(255, 196, 112);
background-color:rgb(71, 147, 175);
border-radius:8px;</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="PswdEdit">
   <property name="geometry">
    <rect>
     <x>200</x>
     <y>130</y>
     <width>113</width>
     <height>22</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font-family: 'Arial'; /* Встановити сімейство шрифтів для вкладок */
  font-size: 14px; /* Встановити розмір шрифту для вкладок */
  font-weight: bold; 
color:rgb(255, 196, 112);
background-color:rgb(71, 147, 175);
border-radius:8px;</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_3">
   <property name="geometry">
    <rect>
     <x>50</x>
     <y>130</y>
     <width>131</width>
     <height>21</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font-family: 'Arial'; /* Встановити сімейство шрифтів для вкладок */
  font-size: 14px; /* Встановити розмір шрифту для вкладок */
  font-weight: bold; 
color:rgb(255, 196, 112);

border-radius:8px;</string>
   </property>
   <property name="text">
    <string>Password</string>
   </property>
  </widget>
  <widget class="QPushButton" name="LoginButton">
   <property name="geometry">
    <rect>
     <x>100</x>
     <y>220</y>
     <width>151</width>
     <height>41</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">font-family: 'Arial'; /* Встановити сімейство шрифтів для вкладок */
  font-size: 14px; /* Встановити розмір шрифту для вкладок */
  font-weight: bold; 
color:rgb(255, 196, 112);
background-color:rgb(71, 147, 175);
border-radius:8px;</string>
   </property>
   <property name="text">
    <string>Login</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
